# leo-telemetry

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-ingest.yml
deploy/argocd/: decode-application.yaml  ingest-application.yaml
deploy/decode/: Chart.yaml  values.yaml
deploy/ingest/: Chart.yaml  KUBECTL_CHEATSHEET.md  README.md  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  redis.yaml  values.yaml
deploy/rbac/: role.yaml  rolebinding.yaml  serviceaccounts.yaml
leo_telemetry/: __init__.py
leo_telemetry/common/: __init__.py  models.py  satellites.py  storage.py
leo_telemetry/decode/: __init__.py  afsk1200.py  ax25.py  crc16.py  frame_sync.py  redis_decoded_queue.py  run.py
leo_telemetry/demux/: __init__.py  demux.py
leo_telemetry/ingest/: __init__.py  audio_client.py  backfill.py  client.py  dedup.py  redis_audio_queue.py  redis_dedup.py  run.py
leo_telemetry/observability/: __init__.py  exporter.py  tracking.py
leo_telemetry/scoring/: __init__.py  readiness.py
tests/fixtures/: afsk1200_iss_aprs_oracle.json  afsk1200_samples.py  golden_frames.json  golden_frames.py  test_afsk1200_samples.py  test_golden_frames.py
tests/test_common/: test_models.py  test_storage.py
tests/test_decode/: test_ax25.py  test_frame_sync.py  test_redis_decoded_queue.py  test_run.py
tests/test_demux/: test_demux.py
tests/test_ingest/: test_audio_client.py  test_client.py  test_dedup.py  test_redis_audio_queue.py  test_redis_dedup.py  test_run.py
tests/test_scoring/: test_readiness.py
(+19 files in other folders)
