[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leo-telemetry"
version = "0.1.0"
description = "LEO satellite data-link ingestion, decoding, and telemetry visualization pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "redis>=5.0",
    "bitstring>=4.1",
    "crccheck>=1.3",
    "kaitaistruct>=0.10",
    "skyfield>=1.49",
    "prometheus-client>=0.20",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "fakeredis>=2.23",
]

[tool.setuptools.packages.find]
include = ["leo_telemetry*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
